fix overlapping table

--- a/src/sass/misc/_article.scss
+++ b/src/sass/misc/_article.scss
@@ -29,3 +29,9 @@
         }
     }
 }
+
+article {
+    h2 {
+        word-break: break-word;
+    }
+}
